added my documents documentation
